# speed-typist

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
src/: main.cpp
src/gui/: CMakeLists.txt  gui.cpp  vcpkg.json
src/gui/include/: gui.hpp
src/storage/: CMakeLists.txt  vcpkg.json
src/storage/include/: storage.hpp
src/storage/src/: main.cpp  storage.cpp
src/storage/src/include/: storage.hpp
